test/FAIL/assertcmd/to_many_arguments/02_test_assert.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="to many arguments"
#-------

assert word 0x15 $t2 $t3